# comfyui-scail2

./: README (1).md  README.md  __init__.py  pyproject.toml  requirements.txt
nodes/: _shared.py  debug.py  encoders.py  loaders.py  sampler.py
resources/: config-1.3b.json  config-14b.json
sample_workflow/: scail2_animation.json
scail2_wan/: __init__.py  scail.py
scail2_wan/configs/: __init__.py  scail_config_14B.py  scail_config_1_3B.py
scail2_wan/distributed/: sequence_parallel.py
scail2_wan/modules/: __init__.py  attention.py  clip.py  model_scail.py  model_scail2.py  t5.py  vae.py
scail2_wan/utils/: lora.py  scail_utils.py
workflows/: scail2_animation.json
